--- a/docs/manuscript.qmd
+++ b/docs/manuscript.qmd
@@ -1,5 +1,5 @@
 ---
-abstract:  "The present study characterises homophonic translation---a phenomenon by which non-native speech activates words or phrases in a listener's native language---from a language processing perspective. Across three studies, English and Spanish-native monolingual adults completed a translation elicitation task in which participants listened to words in an unfamiliar language (Catalan or Spanish), and were asked to type their best-guess translation in their native language. Our findings suggest that that listening to speech in an unfamiliar language triggers equivalent dynamics of lexical selection than native speech. In particular, phonological similarity between the presented words and their correct translations interacted with phonological neighbourhood density: participants correctly translated words with high phonological similarity with their correct translation only when few other words in the native language shared phonological similarity with the presented word."
+abstract:  "Homophonic translation is a popular perceptual phenomenon by which non-native speech activates words or phrases in a listener's native language. In this study, we characterise homophonic translation from a language processing perspective. Across three studies, English and Spanish-native monolingual adults completed a translation elicitation task in which participants listened to words in an unfamiliar language (Catalan or Spanish), and were asked to type their best-guess translation in their native language. Our findings suggest that that listening to speech in an unfamiliar language triggers equivalent dynamics of lexical selection than native speech. In particular, phonological similarity between the presented words and their correct translations interacted with phonological neighbourhood density: participants correctly translated words with high phonological similarity with their correct translation only when few other words in the native language shared phonological similarity with the presented word."
 ---
 ```{r}
 #| label: setup
@@ -54,9 +54,9 @@ theme_set(
 
 When some German speakers listen to the song *The Power* by SNAP! (*Coyote Ugly*, 2000) many of them mishear the line "I've got the power" as *Agatha Bauer*. This auditory illusion, which takes the name *Soramimi* (lit. "empty ear") in Japanese is common across languages and cultures [@dembeck2015oberflachenubersetzung; @efimova2018homophonic]. Soramimi is a particular case of homophonic translation: words or phrases that appear in the speech stream in one language are translated into similar-sounding words and phrases in a different language, without necessarily preserving the meaning [@gasparov2006semen]. Homophonic translation has mostly received attention as a perceptual curiosity or as a literary figure, intentionally employed by translators to preserve the meter and "sound structure" (e.g., rhymes) of an original text in the language of translation [e.g., @levick2016translating; @pilshchikov2016semiotics]. Little attention has been paid to homophonic translation from a language processing perspective. 
 
-One exception is the study by @otake2007interlingual, who analysed 194 instances of Soramimi from the Japanese TV show *Soramimi hour*, broadcasted between 1992 and 2007, in which examples of Soramimi were presented to the audience for comedy purposes. These instances consisted of homophonic translations of English song lyrics to words and phrases in Japanese. While the degree to which phonetic features of the presented English lyrics were in the translation varied considerably, the author identified tree main phonological processes that could explain how Japanese listeners reconstructed the English input to generate the Japanese words: insertion (e.g., *cry* /kɹaɪ̯/ to *kurai* /kɯ̟ɾa̠i/ [dark]), deletion (e.g., *go* /ɡoʊ/ to *go* /go/ [*Go*, a board game], and alternation (e.g., *low* /loʊ/ to *rou* /ɾo̞ː/ [wax]). These findings suggests that homophonic translations can be explained, to some extent, as the result of the Japanese listeners accommodating the strings of English sounds to Japanese phonology and phonotactics [@peperkamp2008perceptual; @dupoux1999epenthetic].
+One exception is the study by @otake2007interlingual, who analysed 194 instances of Soramimi from the Japanese TV show *Soramimi hour*, broadcasted between 1992 and 2007, in which examples of Soramimi were presented to the audience for comedy purposes. These instances consisted of homophonic translations of English song lyrics to words and phrases in Japanese. While the degree to which phonetic features of the presented English lyrics were preserved in the translation varied considerably, Otake identified tree main phonological processes that could explain how Japanese listeners reconstructed the English input to generate the Japanese words: insertion (e.g., *cry* /kɹaɪ̯/ to *kurai* /kɯ̟ɾa̠i/ [dark]), deletion (e.g., *go* /ɡoʊ/ to *go* /go/ [*Go*, a board game], and alternation (e.g., *low* /loʊ/ to *rou* /ɾo̞ː/ [wax]). These findings suggests that homophonic translations can be explained, to some extent, as the result of the Japanese listeners accommodating the strings of English sounds to Japanese phonology and phonotactics [@peperkamp2008perceptual; @dupoux1999epenthetic].
 
-Though rarely, homophonic translations sometimes preserve the meaning of the original word or phrase, even if the listener is completely unfamiliar with the language being spoken3. For example, an English native listening to Dutch for the first time might encounter the Dutch word /ˈpɪŋ.(ɡ)ʋɪn/ (*pinguin*) and be able to activate its correct English translation /ˈpɛŋɡwɪn/ (penguin), given how phonologically similar both word-forms are. This phonological similarity between translation equivalents---known as *cognateness*---is common across many languages, and is often due to typological closeness or socio-historical events involving the speakers of these languages (e.g., migration, social contact). For example, Romance languages such as Spanish and Catalan share many form-similar translation equivalents  [@schepens2012distributions], as in the case of *puerta* and *porta* (*door* in Spanish and Catalan, respectively). Given no prior knowledge of either language, a Spanish native speaker is likely to be much more successful at correctly translating Catalan than English words by capitalising solely on phonological similarity.
+Though rarely, homophonic translations sometimes preserve the meaning of the original word or phrase, even if the listener is completely unfamiliar with the language being spoken. For example, an English native listening to Dutch for the first time might encounter the Dutch word /ˈpɪŋ.(ɡ)ʋɪn/ (*pinguin*) and be able to activate its correct English translation /ˈpɛŋɡwɪn/ (penguin), given how phonologically similar both word-forms are. This phonological similarity between translation equivalents---known as *cognateness*---is common across many languages, and is often due to typological closeness or socio-historical events involving the speakers of these languages (e.g., migration, social contact). For example, Romance languages such as Spanish and Catalan share many form-similar translation equivalents  [@schepens2012distributions], as in the case of *puerta* and *porta* (*door* in Spanish and Catalan, respectively). Given no prior knowledge of either language, a Spanish native speaker is likely to be much more successful at correctly translating Catalan words than English words via homophonic translation, that is, by capitalising solely on phonological similarity.
 
 In the present work, we investigated the interplay between phonological similarity and one of the main mechanisms involved in the dynamics of lexical selection: phonological neighbourhood density. The phonological neighbourhood density of a given word-form refers to the number of words-forms that differ in a single phoneme from it. For instance, the English word *cat* belongs to a dense phonological neighbourhood, with 50 English phonological neighbours (e.g., hat, bat, cap), while the word *charger* belongs to a sparse phonological neighbourhood, with six neighbours (e.g., charged, larger, charter, charmer) [@marian2012clearpond]. Words from dense neighbourhoods are processed (e.g., recognised) more slowly and less accurately in the auditory modality than words from sparse neighbourhoods [e.g., @dufour2003lexical; @goldinger1989priming; @hamburger1996phonological; @luce1990similarity; @luce1998recognizing; @vitevitch1998words; @dufour2010phonological; @vitevitch2006clustering]. This is especially true if such neighbours share higher phonological similarity with the presented word, or are lexically more frequent than the target word [@luce1998recognizing]. Such interference effect of phonological neighbourhood density has also been reported across languages [@weber2004lexical]. In the case of non-native speech processing, the presence of cross-linguistic pairs which are phonologically similar but differ in meaning (e.g., false friends) may act as distractors during lexical access, obstructing the selection of the appropriate target translation in the listener’s lexicon [@otwinowska2019more].
 
@@ -69,7 +69,7 @@ This study was aimed at exploring the interplay between cross-linguistic similar
 
 ## Methods
 
-All materials, data, and code used in this study are hosted in the Open Science Framework [https://osf.io/9fjxm/?view_only=751d6ab27ffd4dd4856e4c07c4372991](https://osf.io/9fjxm/?view_only=751d6ab27ffd4dd4856e4c07c4372991) and a GitHub repository [https://github.com/gongcastro/translation-elicitation.git](https://github.com/gongcastro/translation-elicitation.git), along with additional notes. For reproducibility, a Docker image of the RStudio session is available on DockerHub ([LINK REDACTED FOR ANONIMITY]).
+All materials, data, and code used in this study are hosted in the Open Science Framework ([https://osf.io/9fjxm/?view_only=751d6ab27ffd4dd4856e4c07c4372991](https://osf.io/9fjxm/?view_only=751d6ab27ffd4dd4856e4c07c4372991)) and a GitHub repository ([https://anonymous.4open.science/r/translation-elicitation-8BCE](https://anonymous.4open.science/r/translation-elicitation-8BCE) [FOR ANONYMITY, LINK TEMPORARILY REDIRECTED TO AN ANONYMOUS MIRROR OF THE GITHUB REPOSITORY]), along with additional notes. For reproducibility, a Docker image of the RStudio session is available on DockerHub ([LINK REDACTED FOR ANONIMITY]).
 
 ### Participants
 
@@ -91,11 +91,11 @@ participants_age <- participants_1 |>
 n_female <- table(participants_1$gender)
 ```
 
-We collected data from `r n_participants` British English-native adults living in the United Kingdom (*Mean* = `r round(participants_age$age_mean, 2)` years, *SD* = `r round(participants_age$age_sd, 2)`, range = `r round(participants_age$age_min, 2)`-`r round(participants_age$age_max, 2)`, `r n_female[1]` female). Data collection took place from `r collection_dates[1]` to `r collection_dates[2]`. Participants were recruited via Prolific (£5 compensation) and SONA (compensation in academic credits). Participants gave informed consent before providing any data. The study was conducted in accordance with ethical standards of the Declaration of Helsinki and the protocol was by the University of Oxford Medical Sciences Inter-Divisional Research Ethics Committee (IDREC) (R60939/RE007). Participants were asked to complete the experiment using a laptop in a quiet place with good internet connection. 
+We collected data from `r n_participants` British English-native adults living in the United Kingdom (*Mean* = `r round(participants_age$age_mean, 2)` years, *SD* = `r round(participants_age$age_sd, 2)`, range = `r round(participants_age$age_min, 2)`-`r round(participants_age$age_max, 2)`, `r n_female[1]` female). Data collection took place from `r collection_dates[1]` to `r collection_dates[2]`. Participants were recruited via Prolific (£5 compensation) and SONA (compensation in academic credits). Participants gave informed consent before providing any data. The study was conducted in accordance with ethical standards of the Declaration of Helsinki and the protocol was by the [ETHICAL COMMITTEE REDACTED FOR ANONYMITY]. Participants were asked to complete the experiment using a laptop in a quiet place with good internet connection. 
 
 ```{r}
 #| label: tbl-participants
-#| tbl-cap: "Participant details. *N* indicates the number of included participants, with excluded participants in parenthesis."
+#| tbl-cap: "Participant information. *N* indicates the number of included participants, with excluded participants between parentheses."
 tbl_data <- participants |>
   mutate(
     exp = case_when(
@@ -190,13 +190,13 @@ names(stim_exc_freq) <- janitor::make_clean_names(names(stim_exc_freq))
 stim_exc_freq_n <- sum(map_int(stim_exc_freq, "n"))
 ```
 
-In each trial, participants listened to one audio file, which contained a single word. Audio files were the same ones used in child experiments conducted in the Laboratori de Recerca en Infància of Universitat Pompeu Fabra (Barcelona, Spain). These audio files were recorded by a proficient Catalan-Spanish female bilingual from the Metropolitan Area of Barcelona in a child-directed manner. Catalan and Spanish words were recorded at 44,100 Hz in the same session, and then de-noised using Audacity and normalised at peak intensity using Praat [@broersma2021praat]. The average duration of the Catalan audio files was `r round(durations$cat_eng$duration_mean, 2)` seconds (*SD* = `r round(durations$cat_eng$duration_sd, 2)`, range = `r round(durations$cat_eng$duration_min, 2)`-`r round(durations$cat_eng$duration_max, 2)`). The average duration of the Spanish audio files was `r round(durations$spa_eng$duration_mean, 2)` seconds (*SD* = `r round(durations$spa_eng$duration_sd, 2)`, range = `r round(durations$spa_eng$duration_min, 2)`-`r round(durations$spa_eng$duration_max, 2)`).
+In each trial, participants listened to one audio file, which contained a single word. Audio files were the same ones used in child experiments conducted in the [LABORATORY NAME REDACTED FOR ANONYMITY]. These audio files were recorded by a proficient Catalan-Spanish female bilingual from the Metropolitan Area of Barcelona in a child-directed manner. Catalan and Spanish words were recorded at 44,100 Hz in the same session, and then de-noised using Audacity and normalised at peak intensity using Praat [@broersma2021praat]. The average duration of the Catalan audio files was `r round(durations$cat_eng$duration_mean, 2)` seconds (*SD* = `r round(durations$cat_eng$duration_sd, 2)`, range = `r round(durations$cat_eng$duration_min, 2)`-`r round(durations$cat_eng$duration_max, 2)`). The average duration of the Spanish audio files was `r round(durations$spa_eng$duration_mean, 2)` seconds (*SD* = `r round(durations$spa_eng$duration_sd, 2)`, range = `r round(durations$spa_eng$duration_min, 2)`-`r round(durations$spa_eng$duration_max, 2)`).
 
 We defined three predictors of interest: the lexical frequency of the correct English translation (*Frequency*), the phonological similarity between the presented word and its correct English translation (*Similarity*), and the presented word's number of cross-language phonological neighbours (*CLPN*) in English. *Frequency* was included as a nuisance predictor, under the hypothesis that participants would provide correct responses more often when the correct translations are high frequency words in their native language, keeping other predictors constant. Lexical frequencies of correct English and Spanish translations were extracted from SUBTLEX-UK [@van2014subtlex] and SUBTLEX-ESP [@cuetos2011subtlexesp], respectively, and transformed to Zipf scores. Translations without a lexical frequency value were excluded from data analysis (`r stim_exc_freq$cat_eng$n` in the Catalan list, `r stim_exc_freq$spa_eng$n` in the Spanish list). *Similarity* was calculated as the Levenshtein similarity between the X-SAMPA transcriptions of each pair of translations using the `stringdist` R package [@van2014stringdist]. The Levenshtein distance computes the edit distance between two character strings---in this case, two phonological transcriptions---by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. We divided this edit distance by the number of characters in the longest X-SAMPA transcription of the translation pair. This transformation accounts for the fact that Levenshtein distance tends to increase with the length of the transcriptions. For interpretability, we subtracted this proportion from one, so that values closer to one correspond to higher similarity between phonological transcriptions, and values closer to zero correspond to lower similarity between phonological transcriptions. For example, the *table* (`teIb@l`)-*mesa* (`mesa`) translation pair had `r scales::percent(stringdist::stringsim(enc2utf8("teɪbəl"), enc2utf8("mesa")))` similarity, while the *train* (`trEIn`)-*tren* (`tREn`) translation pair had `r scales::percent(stringdist::stringsim(enc2utf8("trEIn"), enc2utf8("tɾEn")))` similarity. We calculated the number of *CLPN* for each Catalan and Spanish word by counting the number of English words with same or higher lexical frequency, and whose phonological transcription (in X-SAMPA format) differed by up to one phoneme from that of the presented Catalan or Spanish word. Lexical frequencies and phonological transcriptions were extracted from the multilingual database CLEARPOND [@marian2012clearpond]^[Phonological transcriptions in CLEARPOND were generated from eSPEAK, [http://espeak.sourceforge.net/](http://espeak.sourceforge.net/)]. @tbl-stimuli summarises the lexical frequency, *CLPN* and phonological overlap of the words included in the Catalan and the Spanish lists.
 
 ```{r}
 #| label: tbl-stimuli
-#| tbl-cap: "Stimuli details."
+#| tbl-cap: "Stimuli information. *M*: mean, *SD*: standard deviation, *Min*: minimum, *Max*: maximum."
 tbl_data <- stimuli |>
   drop_na(freq_zipf_2, lv, neigh_n_h) |>
   summarise(
@@ -247,7 +247,7 @@ tbl_data |>
   group_tt(
     j = list(
       "Lexical frequency" = 2:5,
-      "Phonological simlarity" = 6:9,
+      "Phonological similarity" = 6:9,
       "CLPN" = 10:13
     ),
   )
@@ -285,8 +285,8 @@ y_{i} \sim & \text{Bernoulli}(p_{i}) \\
 \beta_{1-8[p]} \sim &  \mathcal{N}(\mu_{\beta_{j}}, \sigma_{\beta_{j}}) \text{, for participant } p \text{ in 1, ..., } P \\
 &\textbf{Prior}  \\
 \mu_{\beta_{p,w}}  \sim &  \mathcal{N}(0, 0.1) \\
-\sigma_{\beta_{p}},  \sigma_{\beta_{w}} \sim & \text{HalfCauchy}(0, 0.1) \\
-\rho_{p}, \rho_{w} \sim & \text{LKJCorr}(8) \\
+\sigma_{\beta_{p}},  \sigma_{\beta_{w}} \sim & \text{Exponential}(3) \\
+\rho_{p}, \rho_{w} \sim & \text{LKJCorr}(5) \\
 \end{aligned}
 $$ {#eq-1}
 
@@ -477,7 +477,7 @@ tbl_data |>
 #| label: fig-epreds-1
 #| cache: false
 #| fig-height: 5
-#| fig-width: 11
+#| fig-width: 10
 #| fig-cap: "Posterior model-predicted mean accuracy in Experiment 1. Predictions were generated from 4,000 posterior samples, extracted for different values of *CLPN* (0, 2, 4, 8, 12) and *Similarity* (1-100). Predictions are plotted separately for English participants translating Catalan words, and for English participants translating Spanish words. Lines indicate mean predictions, and intervals indicate 95%, 89%, 78%, 67%, and 50% credible intervals (CrI)."
 get_epreds <- function(
   model,
@@ -572,7 +572,7 @@ participants_age <- participants_2 |>
 n_female <- table(participants_2$gender)
 ```
 
-We collected data from `r n_participants` Spanish native adults living in Spain (*Mean* = `r round(participants_age$age_mean, 2)` years, *SD* = `r round(participants_age$age_sd, 2)`, range = `r round(participants_age$age_min, 2)`-`r round(participants_age$age_max, 2)`, `r n_female` female). Data collection took place from `r collection_dates[1]` to `r collection_dates[2]`. Participants in Spain were contacted via announcements at the University campus(es), and were compensated €5 or an Amazon voucher for the same value. Participants gave informed consent before providing any data and the study was conducted in accordance with ethical standards of the Declaration of Helsinki and the protocol was approved by the Drug Research Ethical Committee (CEIm) of the IMIM Parc de Salut Mar (2020/9080/I).
+We collected data from `r n_participants` Spanish native adults living in Spain (*Mean* = `r round(participants_age$age_mean, 2)` years, *SD* = `r round(participants_age$age_sd, 2)`, range = `r round(participants_age$age_min, 2)`-`r round(participants_age$age_max, 2)`, `r n_female[1]` female). Data collection took place from `r collection_dates[1]` to `r collection_dates[2]`. Participants in Spain were contacted via announcements at the University campus(es), and were compensated €5 or an Amazon voucher for the same value. Participants gave informed consent before providing any data and the study was conducted in accordance with ethical standards of the Declaration of Helsinki and the protocol was approved by the [ETHICAL COMMITTEE REDACTED FOR ANONYMITY].
 
 Stimuli were the same list of Catalan stimuli as in Experiment 1. Procedure and data analysis were identical as in Experiment 1, with the only exception that the statistical model did not include the *Group* predictor, given that only one group (`cat-SPA`) participated in this experiment.
 
@@ -656,7 +656,7 @@ Overall, participants responded less accurately to words with more CLPNs than to
 ```{r}
 #| label: fig-epreds-2
 #| cache: false
-#| fig-cap: "Posterior model-predicted mean accuracy in Experiment 1. Predictions were generated from 4,000 posterior samples, extracted for different values of *CLPN* (0, 2, 4, 8, 12) and *Similarity* (1-100). Lines indicate mean predictions, and intervals indicate 95%, 89%, 78%, 67%, and 50% credible intervals (CrI)."
+#| fig-cap: "Posterior model-predicted mean accuracy in Experiment 2. Predictions were generated from 4,000 posterior samples, extracted for different values of *CLPN* (0, 2, 4, 8, 12) and *Similarity* (1-100). Lines indicate mean predictions, and intervals indicate 95%, 89%, 78%, 67%, and 50% credible intervals (CrI)."
 #| fig-height: 3.5
 #| fig-width: 10
 lv_std <- (lv - mean(dataset_2$lv_std, na.rm = TRUE)) /
@@ -786,7 +786,7 @@ participants_age <- participants_3 |>
 n_female <- table(participants_3$gender)
 ```
 
-We collected data from `r n_participants` British English native adults living in United Kingdom (*Mean* = `r round(participants_age$age_mean, 2)` years, *SD* = `r round(participants_age$age_sd, 2)`, range = `r round(participants_age$age_min, 2)`-`r round(participants_age$age_max, 2)`, `r n_female` female). Data collection took place from `r collection_dates[1]` to `r collection_dates[2]`. Participants were recruited via Prolific (5£ compensation) and SONA (compensation in academic credits), and gave informed consent before providing any data and the study was conducted in accordance with ethical standards of the Declaration of Helsinki and the protocol was approved by the University of Oxford Medical Sciences Inter-Divisional Research Ethics Committee (IDREC) (R60939/RE007). Participants were asked to complete the experiment using a laptop in a quiet place with good internet connection. Stimuli were the same lists of Catalan and Spanish stimuli as in Experiment 1. 
+We collected data from `r n_participants` British English native adults living in United Kingdom (*Mean* = `r round(participants_age$age_mean, 2)` years, *SD* = `r round(participants_age$age_sd, 2)`, range = `r round(participants_age$age_min, 2)`-`r round(participants_age$age_max, 2)`, `r n_female[1]` female). Data collection took place from `r collection_dates[1]` to `r collection_dates[2]`. Participants were recruited via Prolific (5£ compensation) and SONA (compensation in academic credits), and gave informed consent before providing any data and the study was conducted in accordance with ethical standards of the Declaration of Helsinki and the protocol was approved by the [ETHICAL COMMITTEE REDACTED FOR ANONYMITY]. Participants were asked to complete the experiment using a laptop in a quiet place with good internet connection. Stimuli were the same lists of Catalan and Spanish stimuli as in Experiment 1. 
 
 
 ```{r}
@@ -1055,7 +1055,7 @@ epreds_3 |>
 
 Using a translation elicitation task, we investigated how phonological similarity and its interaction with phonological neighbourhood density impact the dynamics of lexical activation and selection during non-native word processing. Our findings support an account of homophonic translation in which thhihs phenomenon results from listeners accommodating non-native phonological forms to their native phoneme inventory, resulting in the activation of native lexical representations. In Experiment 1, we found that English natives activate English word-forms that share some phonological similarity with auditorily presented Catalan and Spanish words (both unfamiliar languages to participants), and later engage dynamics of lexical competition and selection similar to those engaged in native speech processing. In Experiment 2 we extended these findings to a population of participants whose native language was typologically closer to the unfamiliar language presented. Spanish native adults who were unfamiliar with Catalan listened to a list of Catalan words. Spanish natives in Experiment 2 exploited phonological similarity even more strongly than English natives in Experiment 1, suggesting that the typological distance between the presented and target language is associated with a more robust facilitation effect of phonological similarity. In Experiment 3, we replicated the results from Experiment 1 after removing responses in which participants reported some prior knowlegment about the meaning of the presented word, showing that participants' surprisingly good performance in the translation elicitation task was not driven by unreported prior experience with the Catalan and Spanish words.
 
-Future studies may consider comparing the suitability of other measures of phonological similarity that take into account finer-grained phonetic or prosodic cues present in the acoustic signal presented to participants. Phonological transcriptions like X-SAMPA are abstract representations that ignore non-phonological contrasts (e.g., phones), and consider different symbols as completely different phonemes, disregarding the fact that some phonemes share more phonetic features than others. Additionally, prosodic cues such as lexical stress, which our measure of phonological similarity does not include, might also provide participants further information about the correct translation of the presented word-forms. Altogether, it is likely that participants in the present study were able to exploit additional cues in the acoustic signal to provide correct translations. Future studies may explore the relative contribution of such cues in the occurrence of homophonic translation. Another possible limitation of the present study is the limited size and diversity of the all of which had high lexical frequency and low age-of-acquisition. To better characterise the factors that guide listeners’ ability to match words from an unfamiliar language with words in their native language lexicon, words with more varying levels of difficulty should be included in future studies.
+Phonological transcriptions like X-SAMPA are abstract representations that ignore non-phonological contrasts (e.g., phones), and consider different symbols as completely different phonemes, disregarding the fact that some phonemes share more phonetic features than others. Additionally, prosodic cues such as lexical stress, which our measure of phonological similarity does not include, might also provide participants further information about the correct translation of the presented word-forms. Altogether, it is likely that participants in the present study were able to exploit additional cues in the acoustic signal to provide correct translations. Future studies may consider a measure of phonological similarity that captures finer-grained phonetic or prosodic cues present in the acoustic signal presented to participants. explore the relative contribution of such cues in the occurrence of homophonic translation. Another possible limitation of the present study is the limited size and diversity of the all of which had high lexical frequency and low age-of-acquisition. To better characterise the factors that guide listeners’ ability to match words from an unfamiliar language with words in their native language lexicon, words with more varying levels of difficulty should be included in future studies.
 
 In summary, the present paper provides insights into the processing mechanisms underlying homophonic translation. English and Spanish native adults were tested in a translation elicitation task in which they had to guess the English or Spanish translation of a series of words in an unfamiliar language. Participants successfully exploited phonological similarity between the presented words and their correct translations to provide correct answers. Participants' performance in the task only benefited from phonological similarity when the presented word had few higher-frequency phonological neighbours in the target language. Finally, the facilitation effect of phonological similarity was stronger in the Spanish native participants, who translated words from a typologically closer language than English participants. Overall, the findings presented in the present paper suggest that the processing of words in a non-native, unfamiliar language recruits mechanisms of lexical activation, selection, and interference parallel to those recruited by listening to words in a native language.
 
